--- a/wk01.Rmd
+++ b/wk01.Rmd
@@ -14,21 +14,20 @@ Welcome to MATH 456 - Applied Statistics II
 
 ### Notes and Materials
 * The class [Syllabus](./Syllabus.html). 
-* Intro to the Class [[PDF]](notes/lec00_Intro.pdf)[[HTML]](notes/lec00_Intro.html)
-* Preparing Data for Analysis [[PDF]](notes/lec01_data_prep.pdf)[[HTML]](notes/lec01_data_prep.html)
+* lec00: Intro to the Class [[PDF]](notes/lec00_Intro.pdf)[[HTML]](notes/lec00_Intro.html)
+* lec01: Preparing Data for Analysis [[PDF]](notes/lec01_data_prep.pdf)[[HTML]](notes/lec01_data_prep.html)
 
 
 ## Experience (During Class)
 ### Monday
 * Intro to the class
-* Review of the syllabus
-* Independent work 
-    - Prep for Wednesday (Read, Afifi 2.5, write code in lecture notes)
-    - Installing required computing programs 
+* Review of course material layout
+* Q-Focus Activity
+
 
 ### Wednesday
 **Prepare:** Read Afifi Ch 1-3. Complete Afifi problem 2.5. 
-  Recommended to write up responses in Markdown. 
+Recommended to write up responses in Markdown. 
 
 * Preparing Data for Analysis
     - Characterizing Data for Analysis
