--- a/Syllabus.Rmd
+++ b/Syllabus.Rmd
@@ -1,9 +1,9 @@
 ---
 title: "California State University Chico \n Department of Mathematics and Statistics"
 output:
+  pdf_document: default
   html_document:
     highlight: pygments
-  pdf_document: default
 ---
 
 # MATH 456, Applied Statistics II, Section 01, Spring 2016
@@ -13,7 +13,7 @@ output:
 **Office Location:** Holt 216  
 **Telephone:** 898-5767  
 **E-mail:** rdonatello@csuchico.edu  
-**Office Hours:** TBD Week 2
+**Office Hours:** TBD Week 2  
 **Class days and times:** MWF 2-2:50, Holt 155  
 **Prerequisites:** MATH 315/615 at Chico State or instructor permission.  
 **Course Website:** http://norcalbiostat.github.io/MATH456/  
@@ -61,7 +61,7 @@ Here is a [slide deck](notes/xtra01_InstallPrograms.html) containing instruction
 * All course materials can be found on the [course website](http://norcalbiostat.github.io/MATH456/).  
 * We will be using a [Google Group](https://groups.google.com/forum/#!forum/csuc_stat) as the place for discussion outside of class.  
 * You are responsible for regularly checking this forum for updates and announcements.  
-* The daily class schedule can be found on the class website [here](Schedule.html).  
+* The daily class [schedule](Schedule.html) can be found on the class website. 
 * It is your responsibility to be aware of the current schedule.  
 
 
