--- a/wk01.Rmd
+++ b/wk01.Rmd
@@ -5,6 +5,7 @@ date: " 1/25/16"
 output: html_document
 ---
 ```{r results="asis", echo=FALSE}
+#source("~/Github/MATH456/stylesheets/custom.R")
 source("C:/Github/MATH456/stylesheets/custom.R")
 ```
 [[Schedule]](Schedule.html) [[Week 2]](wk02.html)
@@ -16,18 +17,17 @@ Welcome to MATH 456 - Applied Statistics II
 * The class [Syllabus](./Syllabus.html). 
 * lec00: Intro to the Class [[PDF]](notes/lec00_Intro.pdf)[[HTML]](notes/lec00_Intro.html)
 * lec01: Preparing Data for Analysis [[PDF]](notes/lec01_data_prep.pdf)[[HTML]](notes/lec01_data_prep.html)
-
+* [Recruitment database](https://drive.google.com/a/mail.csuchico.edu/file/d/0B83Z8_sNw3KPUG15QTEtSXpZODA/view?usp=sharing)
 
 ## Experience (During Class)
 ### Monday
 * Intro to the class
-* Review of course material layout
-* Q-Focus Activity
+* Review of webpage layout
+* Q-Focus Activity 
 
 
 ### Wednesday
-**Prepare:** Read Afifi Ch 1-3. Complete Afifi problem 2.5. 
-Recommended to write up responses in Markdown. 
+**Prepare:**  Read Afifi Ch 1-3. Problem 2.5. Recommended to write up responses in Markdown.
 
 * Preparing Data for Analysis
     - Characterizing Data for Analysis
