--- a/wk01.Rmd
+++ b/wk01.Rmd
@@ -27,20 +27,18 @@ Welcome to MATH 456 - Applied Statistics II
 
 
 ### Wednesday
-**Prepare:**  Read Afifi Ch 1-3. Problem 2.5. Recommended to write up responses in Markdown.
+**Prepare:**  Read Afifi Ch 1-3. "_On Your Own_" problems for Ch 2.
 
-* Preparing Data for Analysis
-    - Characterizing Data for Analysis
-    - Data wrangling, munging, recoding, editing, cleaning
 * Discuss and share answers to Afifi Problem 2.5
+* Preparing Data for Analysis
+    - Characterizing Data for Analysis (Ch 2)
+    - Data wrangling, munging, recoding, editing, cleaning (Ch 3)
 
 
 ### Friday
 **Prepare:** If not done yet, complete your code file with all code 
   from the lecture code worked through. 
-
+  
 * Finish data wrangling, munging, recoding, editing, cleaning.
-
-## Homework (After class)
-* The "_On Your Own_" problems for Ch 3
+* "_On Your Own_" problems for Ch 3
 
