--- a/notes/lec02_LinReg.Rmd
+++ b/notes/lec02_LinReg.Rmd
@@ -69,11 +69,34 @@ $$ \rho^{2} = \frac{\sigma_{y}^{2} - \sigma^{2}}{\sigma_{y}^{2}}$$
 Data were from an epidemiological study of households living in four areas with
 different amounts and types of air pollution.
 
+1. Download the [Lungraw](https://drive.google.com/open?id=0B83Z8_sNw3KPS29hZ1p3eXk4dmc) 
+   data set and its [LungCodebook](https://drive.google.com/open?id=0B83Z8_sNw3KPNHpjZDRfaTR1LTQ) 
+   from the Google Drive. 
+2. Open this file. What is the first problem you encounter? 
+3. Read in the data into R using `read.delim()` and use the codebook to fix the variable names.
+```{r}
+d <- read.delim("C:/GitHub/MATH456/data/Lungraw.txt", sep=" ", header=FALSE, stringsAsFactors = FALSE)
+names(d) <- c("ID", "AREA", "FSEX", "FAGE", "FHEIGHT", "FWEIGHT", "FFVC", "FFEV1", 
+                            "MSEX", "MAGE", "MHEIGHT", "MWEIGHT", "MFVC", "MFEV1", 
+                            "OCSEX", "OCAGE", "OCHEIGHT", "OCWEIGHT", "OCFVC", "OCFEV1",
+                            "MCSEX", "MCAGE", "MCHEIGHT", "MCWEIGHT", "MCFVC", "MCFEV1",
+                            "YCSEX", "YCAGE", "YCHEIGHT", "YCWEIGHT", "YCFVC", "YCFEV1")
+```
+4. Use `str(d)` to check to see if all the variables are the correct data types. 
+   Fix any that are not. 
+   [Link to the Stack Overflow post that I googled to find a solution](http://stackoverflow.com/questions/22772279/converting-multiple-columns-from-character-to-numeric-format-in-r)
+```{r}
+str(d)
+cols.num <- c("MCSEX", "MCAGE", "MCHEIGHT", "MCWEIGHT", "MCFVC", "MCFEV1",
+              "YCSEX", "YCAGE", "YCHEIGHT", "YCWEIGHT", "YCFVC", "YCFEV1")
+d[cols.num] <- sapply(d[cols.num],as.numeric)
+str(d)
+```
 
-
-We use only the data taken on the fathers, all are nonsmokers:
-X = height in inches
-Y = forced expiratory volume in one second (FEV1)
+5. Save this data as a tab-delimited text file onto your computer. 
+```{r}
+write.table("d", file="C:/Github/MATH456/data/Lung.txt", sep="\t")
+```
 
 
 ##### On Your Own: 
