--- a/notes/lec02_LinReg.Rmd
+++ b/notes/lec02_LinReg.Rmd
@@ -66,8 +66,7 @@ $$ \rho^{2} = \frac{\sigma_{y}^{2} - \sigma^{2}}{\sigma_{y}^{2}}$$
 * Caution: association vs. causation.
 
 ### Example: Lung Function
-Data were from an epidemiological study of households living in four areas with
-different amounts and types of air pollution.
+_Section 6.3_
 
 1. Download the [Lungraw](https://drive.google.com/open?id=0B83Z8_sNw3KPS29hZ1p3eXk4dmc) 
    data set and its [LungCodebook](https://drive.google.com/open?id=0B83Z8_sNw3KPNHpjZDRfaTR1LTQ) 
@@ -75,28 +74,53 @@ different amounts and types of air pollution.
 2. Open this file. What is the first problem you encounter? 
 3. Read in the data into R using `read.delim()` and use the codebook to fix the variable names.
 ```{r}
-d <- read.delim("C:/GitHub/MATH456/data/Lungraw.txt", sep=" ", header=FALSE, stringsAsFactors = FALSE)
-names(d) <- c("ID", "AREA", "FSEX", "FAGE", "FHEIGHT", "FWEIGHT", "FFVC", "FFEV1", 
+fev <- read.delim("C:/GitHub/MATH456/data/Lungraw.txt", sep=" ", header=FALSE, stringsAsFactors = FALSE)
+names(fev) <- c("ID", "AREA", "FSEX", "FAGE", "FHEIGHT", "FWEIGHT", "FFVC", "FFEV1", 
                             "MSEX", "MAGE", "MHEIGHT", "MWEIGHT", "MFVC", "MFEV1", 
                             "OCSEX", "OCAGE", "OCHEIGHT", "OCWEIGHT", "OCFVC", "OCFEV1",
                             "MCSEX", "MCAGE", "MCHEIGHT", "MCWEIGHT", "MCFVC", "MCFEV1",
                             "YCSEX", "YCAGE", "YCHEIGHT", "YCWEIGHT", "YCFVC", "YCFEV1")
 ```
-4. Use `str(d)` to check to see if all the variables are the correct data types. 
+4. Use `str(fev)` to check to see if all the variables are the correct data types. 
    Fix any that are not. 
    [Link to the Stack Overflow post that I googled to find a solution](http://stackoverflow.com/questions/22772279/converting-multiple-columns-from-character-to-numeric-format-in-r)
 ```{r}
-str(d)
+str(fev)
 cols.num <- c("MCSEX", "MCAGE", "MCHEIGHT", "MCWEIGHT", "MCFVC", "MCFEV1",
               "YCSEX", "YCAGE", "YCHEIGHT", "YCWEIGHT", "YCFVC", "YCFEV1")
-d[cols.num] <- sapply(d[cols.num],as.numeric)
-str(d)
+fev[cols.num] <- sapply(fev[cols.num],as.numeric)
+str(fev)
 ```
 
-5. Save this data as a tab-delimited text file onto your computer. 
+5. Save this data as a tab-delimited text file onto your computer for later use. 
 ```{r}
-write.table("d", file="C:/Github/MATH456/data/Lung.txt", sep="\t")
+write.table("fev", file="C:/Github/MATH456/data/Lung.txt", sep="\t")
 ```
+
+6. Create a scatterplot of FEV versus height for fathers. 
+   Add a blue linear regression line and red lowess line.
+   Add appropriate plot titles and axes labels.
+   [R Cookbook reference](http://www.cookbook-r.com/Graphs/Scatterplots_(ggplot2)/)
+
+```{r}
+library(ggplot2)
+qplot(y=FFEV1, x=FHEIGHT, geom="point", data=fev, xlab="Height", ylab="FEV1", 
+      main="Scatter Diagram with Regression (blue) and Lowess (red) Lines 
+      of FEV1 Versus Height for Fathers.") + 
+      geom_smooth(method="lm", se=FALSE, col="blue") + 
+      geom_smooth(se=FALSE, col="red") 
+  
+```
+There does appear to be a tendency for taller men to have higher FEV1. 
+
+7. Fit a linear model and report the regression parameter estimates. 
+```{r}
+model <- lm(FFEV1 ~ FHEIGHT, data=fev)
+summary(model)
+```
+The least squares equation is 
+$$ Y = -408.67 + 11.8X $$
+For ever inch taller a father is, his FEV1 measurement increases by 11.8. 
 
 
 ##### On Your Own: 
