--- a/wk01.Rmd
+++ b/wk01.Rmd
@@ -2,7 +2,7 @@
 title: "Week 1"
 author: "MATH 459, Spring 2016"
 date: ' 1/25/16'
-output: pdf_document
+output: html_document
 ---
 ```{r results="asis", echo=FALSE}
 #source("~/Github/MATH456/stylesheets/custom.R")
@@ -29,8 +29,21 @@ Welcome to MATH 456 - Applied Statistics II
 ### Tuesday
 * OH to help get required programs set up. Suggested times? 
 
+
 ### Wednesday
-**Prepare:**  Read Afifi Ch 1-3. "_On Your Own_" problems for Ch 2.
+**Prepare:**  
+
+* Download and install R and R studio  
+    - You can find a set of slides on how to install both [here](http://htmlpreview.github.io/?https://github.com/norcalbiostat/R-Bootcamp/blob/gh-pages/lecture_notes/0_2_-_Setup_R_and_R_Studio.html) 
+    - note that these slides are from a different class. These slides also contain links to You Tube videos that can help you with these installations.
+    - Don't worry about the swirl lessons. They will not be used for this class. 
+* Review [lec01](notes/lec01_data_prep.html) notes.    
+* We will be starting to use R and Markdown at the same time tomorrow. If you have never used Markdown then you are advised to  
+    - Follow along with this 6 minute tutorial https://www.youtube.com/watch?v=DNS7i2m4sB0 
+    - Review the basics of the markdown syntax in this 2 minute video https://www.youtube.com/watch?v=Nc0CS0nX-M4
+* Complete Afifi problem 2.5. I have scanned Afifi chapter 2 and 3 - this PDF can be found in the shared Google Drive. If you do not have access please email me. 
+
+**In class:**
 
 * Discuss and share answers to Afifi Problem 2.5
 * Preparing Data for Analysis
@@ -39,9 +52,13 @@ Welcome to MATH 456 - Applied Statistics II
 
 
 ### Friday
-**Prepare:** If not done yet, complete your code file with all code 
-  from the lecture code worked through. 
+**Prepare:** 
+
+* Finish write all code from the lecture notes in a markdown file. 
+  - One RMD file per chapter to help keep your notes organized. 
   
+**In class:**
+
 * Finish data wrangling, munging, recoding, editing, cleaning.
-* "_On Your Own_" problems for Ch 3
+* Start "_On Your Own_" problems for Ch 3 in a new markdown file 
 
